Add Copyright Info

--- a/upload/admin/view/template/extension/module/seo_url_generator.twig
+++ b/upload/admin/view/template/extension/module/seo_url_generator.twig
@@ -1,4 +1,8 @@
 {{ header }}{{ column_left }}
+<!--
+@author Dmytro Sokolenko <sokol1294@gmail.com>
+@license GNU General Public License, version 3. See LICENSE
+!-->
 <div id="content">
   <div class="page-header">
     <div class="container-fluid">
