--- a/upload/admin/view/template/extension/module/seo_url_generator.twig
+++ b/upload/admin/view/template/extension/module/seo_url_generator.twig
@@ -48,6 +48,59 @@
               </select>
             </div>
           </div>
+          <div class="tab-pane">
+            <ul class="nav nav-tabs" id="language">
+              {% for language in languages %}
+                <li>
+                  <a href="#language{{ language.language_id }}" data-toggle="tab">
+                    <img src="language/{{ language.code }}/{{ language.code }}.png" title="{{ language.name }}" /> {{ language.name }}
+                  </a>
+                </li>
+              {% endfor %}
+            </ul>
+            <div class="tab-content">
+              {% for language in languages %}
+                <div class="tab-pane" id="language{{ language.language_id }}">
+                  <div class="table-responsive">
+                    <table id="transliteration{{ language.language_id }}" class="table table-striped table-bordered table-hover">
+                      <thead>
+                        <tr>
+                          <td class="text-left">{{ entry_input }}</td>
+                          <td class="text-left">{{ entry_output }}</td>
+                          <td></td>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        {% set transliteration_row = 0 %}
+                        {% for module_seo_url_generator_transliteration in module_seo_url_generator_transliterations[language.language_id] %}
+                          <tr id="transliteration{{ language.language_id }}-row{{ transliteration_row }}">
+                            <td class="text-left">
+                              <input type="text" name="module_seo_url_generator_transliteration[{{ language.language_id }}][{{ transliteration_row }}][input]" value="{{ module_seo_url_generator_transliteration.input }}" placeholder="{{ entry_input }}" class="form-control" />
+                            </td>
+                            <td class="text-left">
+                              <input type="text" name="module_seo_url_generator_transliteration[{{ language.language_id }}][{{ transliteration_row }}][output]" value="{{ module_seo_url_generator_transliteration.output }}" placeholder="{{ entry_output }}" class="form-control" />
+                            </td>
+                            <td class="text-center" style="width: 1px;">
+                              <button type="button" onclick="$('#transliteration{{ language.language_id }}-row{{ transliteration_row }}').remove();" data-toggle="tooltip" title="{{ button_remove }}" class="btn btn-danger"><i class="fa fa-minus-circle"></i></button>
+                            </td>
+                          </tr>
+                          {% set transliteration_row = transliteration_row + 1 %}
+                        {% endfor %}
+                      </tbody>
+                      <tfoot>
+                        <tr>
+                          <td colspan="2"></td>
+                          <td class="text-center" style="width: 1px;">
+                            <button type="button" data-language-id="{{ language.language_id }}" data-transliteration-row="{{ transliteration_row }}" data-toggle="tooltip" title="{{ button_add }}" class="btn btn-primary add-transliteration-row"><i class="fa fa-plus-circle"></i></button>
+                          </td>
+                        </tr>
+                      </tfoot>
+                    </table>
+                  </div>
+                </div>
+              {% endfor %}
+            </div>
+          </div>
           <div class="form-group">
             <label class="col-sm-2 control-label" for="input-status">{{ entry_status }}</label>
             <div class="col-sm-10">
@@ -80,5 +133,35 @@
       </div>
     </div>
   </div>
+  <script type="text/javascript"><!--
+    $('button.add-transliteration-row').on('click', function(e) {
+      e.preventDefault();
+
+      var language_id = $(this).attr('data-language-id'),
+        transliteration_row = $(this).attr('data-transliteration-row');
+
+
+      var html = '';
+
+      html += '<tr id="transliteration' + language_id + '-row' + transliteration_row + '">';
+      html += '  <td class="text-left">';
+      html += '    <input type="text" name="module_seo_url_generator_transliteration[' + language_id + '][' + transliteration_row + '][input]" value="" placeholder="{{ entry_input }}" class="form-control" />';
+      html += '  </td>';
+      html += '  <td class="text-left">';
+      html += '    <input type="text" name="module_seo_url_generator_transliteration[' + language_id + '][' + transliteration_row + '][output]" value="" placeholder="{{ entry_output }}" class="form-control" />';
+      html += '  </td>';
+      html += '  <td class="text-center" style="width: 1px;">';
+      html += '    <button type="button" onclick="$(\'#transliteration' + language_id + '-row' + transliteration_row + '\').remove();" data-toggle="tooltip" title="{{ button_remove }}" class="btn btn-danger"><i class="fa fa-minus-circle"></i></button>';
+      html += '  </td>';
+      html += '</tr>';
+
+      $('#transliteration' + language_id + ' tbody').append(html);
+
+      $(this).attr('data-transliteration-row', ++transliteration_row);
+    });
+  //--></script>
+  <script type="text/javascript"><!--
+    $('#language a:first').tab('show');
+  //--></script>
 </div>
 {{ footer }}
